--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,5 @@ services:
       - "8000:8000"
     volumes:
       - .:/docs
+    command: ["mkdocs", "serve", "--dev-addr=0.0.0.0:8000", "--livereload"]
     restart: unless-stopped
-
-volumes:
-  pip-cache:
