--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,5 +48,6 @@ nav:
       - 'Validación OTP': 'invictus_desembolso_otp_valida.md'
       - 'Reenvio OTP': 'invictus_desembolso_reenvio_otp.md'
       - 'Lineas de Credito': 'invictus_desembolso_linea_credito.md'
+      - 'Desembolso': 'invictus_desmebolso.md'
   - 'Municipio':
       - 'Consultar': 'consulta_municipio.md'
